@@ -42,7 +42,7 @@ import org.kiji.annotations.Inheritance;
  *
  * This interface is not used alone but is bundled within {@link KijiTableWriter}.
  */
-@ApiAudience.Framework
+@ApiAudience.Public
 @Inheritance.Sealed
 public interface KijiPutter extends Closeable, Flushable {
   /**
